<resources>
    <string name="app_name">Unit Calculation</string>
    <string name="unit_calculation">Unit Calculation</string>
    <string name="category">Category</string>
    <string name="from">From :</string>
    <string name="enter_value">"Enter Value "</string>
    <string name="to">To :</string>
    <string name="calculate_value">Calculate Value</string>
    <string name="common">Common :</string>
</resources>