<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".calculations">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/appToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        >

        <ImageView
                    android:id="@+id/calBackBtn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/baseline_arrow_back_24"
                    android:paddingVertical="5sp">

                </ImageView>
        <TextView
                    android:id="@+id/CatHeaderTitle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/category"
                    android:textColor="@color/white"
                    android:gravity="left"
                    android:paddingVertical="15sp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:paddingStart="20sp"/>

    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10sp"
        android:paddingTop="20sp">

        <LinearLayout
            android:id="@+id/CalLayoutFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="10sp"
                android:paddingStart="20sp"
                android:text="@string/from"
                android:textColor="@color/primary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/CalFromSpliner"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:foregroundTint="@color/primary"
                android:backgroundTint="@color/primary"
                android:layout_marginHorizontal="20sp"
                android:textAlignment="center" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textEditTextFrom"
            android:layout_width="match_parent"
            android:backgroundTint="@color/primary"
            android:layout_height="80dp"

            android:layout_below="@+id/CalLayoutFrom"
            android:paddingHorizontal="10sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/CalEditTextFrom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/CalLayoutFrom"
                android:hint="@string/enter_value"
                android:inputType="numberDecimal"
                android:textAlignment="viewEnd"
                android:textSize="20sp"

                />
        </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10sp"
        android:paddingTop="50sp">
        <LinearLayout
            android:id="@+id/CalLayoutTo"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="10sp"
                android:paddingStart="20sp"
                android:text="@string/to"
                android:textColor="@color/primary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/CalToSpliner"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:backgroundTint="@color/primary"
                android:textAlignment="center"
                android:layout_marginHorizontal="20sp"
                />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textEditTextTo"
            android:layout_width="match_parent"
            android:layout_below="@+id/CalLayoutTo"
            android:paddingHorizontal="10sp"
            android:backgroundTint="@color/primary"
            android:layout_height="80dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_below="@+id/CalLayoutTo"
                android:id="@+id/CalEditTextTo"
                android:editable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/calculate_value"
                android:inputType="numberDecimal"
                android:textAlignment="viewEnd"
                android:textSize="20sp"

                />
        </com.google.android.material.textfield.TextInputLayout>



    </RelativeLayout>

</LinearLayout>